Support legacy servers with Java 8 bytecode